RESOLVED FIXED227560
Regression(r278737): WebContent crash when calling [WKWebView loadHTMLString:] with an invalid URL
https://bugs.webkit.org/show_bug.cgi?id=227560
Summary Regression(r278737): WebContent crash when calling [WKWebView loadHTMLString:...
Chris Dumez
Reported 2021-06-30 19:09:40 PDT
WebContent crash when calling [WKWebView loadHTMLString:] with an invalid URL.
Attachments
Patch (4.30 KB, patch)
2021-06-30 19:15 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-06-30 19:09:51 PDT
Chris Dumez
Comment 2 2021-06-30 19:15:10 PDT
EWS
Comment 3 2021-06-30 23:09:46 PDT
Committed r279450 (239306@main): <https://commits.webkit.org/239306@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432649 [details].
Note You need to log in before you can comment on or make changes to this bug.