Regression(r278737): WebContent crash when calling [WKWebView loadHTMLString:] with an invalid URL https://bugs.webkit.org/show_bug.cgi?id=227560 <rdar://79815425>

Reviewed by Alex Christensen.

Source/WebKit:

Make sure the parsed URL is valid in WebPage::loadData() before getting its protocol and calling
LegacySchemeRegistry::registerURLSchemeAsHandledBySchemeHandler() with it. Passing a null String
to LegacySchemeRegistry::registerURLSchemeAsHandledBySchemeHandler() causes crashes.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::loadData):

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/LoadAlternateHTMLString.mm:
(TEST):


Canonical link: https://commits.webkit.org/239306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279450 268f45cc-cd09-0410-ab3c-d52691b4dbfc